--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "facebook/graph-sdk": "^5.5",
         "laravel/framework": "5.3.*",
+        "laravel/socialite": "^2.0",
         "laravelcollective/html": "^5.3.0"
     },
     "require-dev": {
