uploaded call back url for fb and twitter

--- a/.env
+++ b/.env
@@ -33,8 +33,8 @@ PUSHER_SECRET=
 
 TWITTER_ID=YpHyWTvPFdnllRSrqtcDd4iFs
 TWITTER_SECRET=SHS1vm8xIgPXzV1igqtPcjHdx89OpXFLhV44YW02UFJHOdIGoH
-TWITTER_URL=http://smpm.dev/auth/twitter/callback
+TWITTER_URL=http://smpm.herokuapp.com/auth/twitter/callback
 
 FB_ID=1044303765700915
 FB_SECRET=ee4f668e2196e0b1a2e2df3b278024a1
-FB_URL=http://smpm.dev/auth/facebook/callback
+FB_URL=http://smpm.herokuapp.com/auth/facebook/callback
