--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "facebook/graph-sdk": "^5.5",
+        "guzzlehttp/oauth-subscriber": "^0.3.0",
         "laravel/framework": "5.3.*",
         "laravel/socialite": "^2.0",
         "laravelcollective/html": "^5.3.0",
